# FantasyGameV2

./: .gitignore  CMakeLists.txt  Main.cpp  Overview  Player.cpp  Player.h
EaseOfUse/: easeOfUse.cpp  easeOfUse.h
Enemies/: Acolyte.cpp  Acolyte.h  Enemies.h  Knight.cpp  Knight.h  Ogre.cpp  Ogre.h  Thrall.cpp  Thrall.h  Wizard.cpp  Wizard.h
Game/: Driver.cpp  Driver.h  Player.cpp  Player.h
Items/: Item.h
Items/Armor/: Armor.cpp  Armor.h  CommonArmor.cpp  CommonArmor.h  ExoticArmor.cpp  ExoticArmor.h  LegendaryArmor.cpp  LegendaryArmor.h  StarterArmor.cpp  StarterArmor.h
Items/Potions/: HealingPotion.cpp  HealingPotion.h  Potion.cpp  Potion.h
Items/Swords/: CommonSword.cpp  CommonSword.h  ExoticSword.cpp  ExoticSword.h  LegendarySword.cpp  LegendarySword.h  StarterSword.cpp  StarterSword.h  Sword.cpp  Sword.h
Locations/: Arena.cpp  Arena.h  Shop.cpp  Shop.h
